# libsdcparse

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  test.sdc  test7.sdc
.github/workflows/: test.yml
docs/dev/: README.md
src/: Makefile  main.c  main.cpp  nullptr.h  sdc.c  sdc.cpp  sdc.h  sdc.hpp  sdc.l  sdc.y  sdc_common.c  sdc_common.cpp  sdc_common.h  sdc_common.hpp  sdc_error.c  sdc_error.cpp  sdc_lexer.c  sdc_lexer.cpp  sdc_lexer.h  sdc_lexer.l  sdc_parse.l  sdc_parse.y  sdc_parser.h  sdc_parser.l  sdc_parser.y  sdc_timing_object.h  sdc_timing_object_database.cpp  sdc_timing_object_database.h  sdcparse.cpp  sdcparse.hpp
src/tcl/: script_converter.py  sdc_commands.cpp  sdc_commands.h  sdc_commands.i  sdc_wrapper.h  sdc_wrapper.tcl  tcl_interpreter.h
test/: CMakeLists.txt  libsdcparse-lit.py  lit.cfg.py  lit.site.cfg.py.in  not.py  tcl.supp
test/basic/: all_clocks.sdc  all_inputs.sdc  all_outputs.sdc  create_clock.sdc  create_generated_clock.sdc  create_port.sdc  get_cells.sdc  get_name.sdc  get_nets.sdc  get_pins.sdc  get_ports.sdc  get_property.sdc  parser_hello_world.tcl  set_clock_groups.sdc  set_clock_latency.sdc  set_clock_uncertainty.sdc  set_disable_timing.sdc  set_false_path.sdc  set_input_delay.sdc  set_max_delay.sdc  set_min_delay.sdc  set_multicycle_path.sdc  set_output_delay.sdc  set_timing_derate.sdc
test/doc_examples/: A.sdc  B.sdc  C.sdc  D.sdc  E.sdc  F.sdc
test/legacy/: test.sdc  test11.sdc  test12.sdc  test13.sdc  test14.sdc  test2.sdc  test3.sdc  test4.sdc  test5.sdc  test6.sdc  test7.sdc  test8.sdc  test9.sdc  test_early_late.sdc  test_escape.sdc  test_invalid.sdc
test/old_tests/: test.sdc  test10.sdc  test11.sdc  test12.sdc  test13.sdc  test14.sdc  test2.sdc  test3.sdc  test4.sdc  test5.sdc  test6.sdc  test7.sdc  test8.sdc  test9.sdc  test_early_late.sdc  test_escape.sdc  test_invalid.sdc  test_io_min_max.sdc
test/strong/: backslash_match.sdc  set_linenum.sdc  special_characters.sdc  square_bracket_match.sdc
test/strong/benchmarks/: mes_noc.sdc
test/strong/create_clock/: incorrect_object_type_cell.sdc  missing_period.sdc  non_int_period.sdc
test/strong/create_generated_clock/: both_divide_and_multiply.sdc  divide_by_less_than_1.sdc  duty_cycle_out_of_range.sdc  duty_cycle_without_multiply.sdc  edge_shift_non_double.sdc  edge_shift_wrong_length.sdc  edges_non_double.sdc  edges_with_divide_by.sdc  edges_with_multiply_by.sdc  edges_wrong_count.sdc  invert_without_div_mult.sdc  missing_div_and_mult.sdc  missing_div_mult_or_edges.sdc  missing_name_and_target.sdc  missing_source.sdc  missing_targets.sdc  multiply_by_less_than_1.sdc
test/strong/get_name/: invalid_name.sdc
test/strong/get_ports/: no_matches.sdc
test/strong/get_property/: missing_object_type.sdc  missing_property.sdc  multiple_objects.sdc  unknown_property.sdc
test/strong/set_clock_groups/: deprecated_exclusive.sdc  multiple_types.sdc
test/strong/set_io_delay/: set_io_delay_wildcard.sdc  set_io_delay_wildcard_none.sdc
test_sdcs/: temp_test.sdc  test.sdc  test13.sdc  test14.sdc  test_parser.sh
test_sdcs/lit_tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test_sdcs/lit_tests/basic/: all_outputs.sdc  create_clock.sdc  get_cells.sdc  get_name.sdc  get_pins.sdc  get_ports.sdc  set_clock_groups.sdc  set_clock_latency.sdc  set_clock_uncertainty.sdc  set_disable_timing.sdc  set_false_path.sdc  set_input_delay.sdc  set_max_delay.sdc  set_min_delay.sdc  set_multicycle_path.sdc
test_sdcs/lit_tests/doc_examples/: A.sdc  B.sdc  C.sdc  D.sdc  E.sdc  F.sdc
test_sdcs/lit_tests/legacy/: test.sdc  test10.sdc  test13.sdc  test2.sdc  test_early_late.sdc  test_invalid.sdc  test_io_min_max.sdc
test_sdcs/lit_tests/old_tests/: test.sdc  test11.sdc  test5.sdc  test6.sdc  test9.sdc  test_invalid.sdc
